--- a/Quantum_Computing_basics_done.ipynb
+++ b/Quantum_Computing_basics_done.ipynb
@@ -55,10 +55,10 @@
     "$$\n",
     "Going forward, we will keep to the ket-notation. The constants $c_0$ and $c_1$ fulfill the normalization property of quantum mechanics, i.e. that we can consider the squared value of $\\psi$ as a probability distribution. In our case the distribution is discrete, and we have \n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "|c_0|^2 + |c_1|^2 = 1, c_0, c_1 \\in \\mathbb{C}.\n",
     "\\label{Norm_single_qubit}\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "Now we can clearly see the difference between a bit and a qubit. If a bit is a 1, it will stay a 1 until we change it. With qubits we can replicate this by choosing $|c_1|^2 = 1$ and $|c_0|^2 = 0$, such that $\\vert\\psi\\rangle =\\vert1\\rangle$. However, if we choose $|c_0|^2=|c_1|^2 = \\frac{1}{\\sqrt{2}}$, still fulfilling equation \\eqref{Norm_single_qubit}, we get $\\vert\\psi\\rangle = \\frac{1}{\\sqrt{2}}\\vert0\\rangle + \\frac{1}{\\sqrt{2}} \\vert1\\rangle $ , indicating that our qubit is _both_ $0$ and $1$ _at the same time_ ! This is one of the fundamental properties of quantum mechanics and is called superposition. Until we measure which state the qubit is in, it is in both states simultaneously, but when measured we will always get either $0$ or $1$, where the probability of measuring each state is given by $|c_0|^2$ and $|c_1|^2$ [[1]](#rsc). This is called collapsing the wave function. It may seem strange to use such a nondeterministic process in a computer, but the nondeterminacy is exactly what makes the quantum computers so powerful!\n",
     "\n",
@@ -85,7 +85,7 @@
     "A qubit is a two-level system (TLS), meaning that it consists of two independent states. This can be realized in various ways, one famous example is the spin of the electron. The spin is either \"up\" corresponding to the state $\\vert 0\\rangle$ or down with state $\\vert 1\\rangle$. Let us assume that we can prepare the electron so that it starts with spin down, $\\vert \\psi_0\\rangle = \\vert 0\\rangle$. Applying an oscillating electromagnetic field $E(t)$ it is possible to change $\\vert \\psi_0\\rangle$ such that depending on how long the field is applied, $\\vert \\psi_0\\rangle$ is transformed according to \n",
     "\n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
     "\\vert \\psi(t)\\rangle=  \n",
     "\\begin{bmatrix}\n",
     "\\cos(t\\Omega/2) & -\\sin(t\\Omega/2)\\mathrm{e}^{-i\\phi} \\\\\n",
@@ -93,7 +93,7 @@
     "\\end{bmatrix}\n",
     " \\vert \\psi_0\\rangle,\n",
     "\\label{simple_U}\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "where $\\Omega$ is called the Rabi frequency, and can be expressed through the strength of the electromagnetic field, the strength of interaction between the field and the spin and a few other parameters. A thorough derivation of this expression can be found in chapter 3 in [[2]](#rsc). Note that to find $\\vert \\psi(t)\\rangle$, we simply multiply the matrix with the column vector, using normal matrix multiplication. You also might notice the similarity to the 2D rotation matrix, and this is a fundamental property of matrices that can be applied to qubits. They **always** preserve the norm of our state. An equivalent statement is that the sum of all possible outcomes (states) is always 1.\n",
     "\n",
@@ -621,13 +621,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
-   "text_representation": {
-    "extension": ".md",
-    "format_name": "markdown",
-    "format_version": "1.2",
-    "jupytext_version": "1.6.0"
-   }
+   "formats": "ipynb,md"
   },
   "kernelspec": {
    "display_name": "Python 3",
